added content primarily to ch3, some stylistic edits elsewhere

--- a/tex/ch1.tex
+++ b/tex/ch1.tex
@@ -153,7 +153,7 @@ other things, lists of all buffers and media required to make a batch.  Two
 complex optimisation problems now emerge; how do we design the buffer and media
 preparation areas?  For media, the problem is relatively easy to solve with some
 trial and error, since there are typically only about 10 media used per batch
-and they often differ vastly in scale -- the initial bioreactor may be 20 litres
+and they often differ vastly in scale; the initial bioreactor may be 20 litres
 in volume and the production bioreactor may be 20,000 litres in volume.  Because
 of this, the sizing of preparation vessels usually proceeds by picking a vessel
 capable of preparing the largest medium, defining a minimum fill volume and
@@ -175,10 +175,10 @@ steps in an operation or across multiple operations, is it best to perform
 many preparations, or few?  Additionally, is it best to hold the buffer
 in many seperate hold vessels, allowing them to be individually freed up more
 quickly, or is it better to consolidate and minimised the number of vessels?
-Defining success in the design of buffer preparation is also difficult -- there
-are trade-offs between efficiency and flexibility, capital and operating costs,
-and many other factors such as installed area, installed volume, operability, 
-layout/adjacency, piepwork complexity and cleanability.
+Defining success in the design of buffer preparation is also difficult.
+There exist trade-offs between efficiency and flexibility, capital and 
+operating costs, and many other factors such as installed area, installed 
+volume, operability, layout/adjacency, piepwork complexity and cleanability.
 
 Due to the high salt concentrations in some buffers, they can prove corrosive
 to the commonly used grades of stianless steel, such as 316L.  Such buffers
