--- a/tex/ch2.tex
+++ b/tex/ch2.tex
@@ -154,7 +154,7 @@ with associated capacities.  The aim is to each item to a bin so that the weight
 capacity of the bin is not exceeded and the number of bins is minimised.
 A number of algorithms for both exact and approximate solutions of the
 bin-pakcing problem have been developed. \citet{Korte:2012} state that the
-bin-packing problem is strongly $\mathcal{NP}$-hard, indicating that efforts
+bin-packing problem is strongly \textbf{NP}-hard, indicating that efforts
 should be taken to minimise the sample space when dealing with optimising vessel
 selection.
 
@@ -170,7 +170,7 @@ In terms of process scheduling methodologies, a number of papers exist in the
 field of chemical engineering \citep{Ahmed:2000},
 
 \citet{Ahmed:2000} states that the general process planning problem is also
-$\mathcal{NP}$-hard.
+\textbf{NP}-hard.
 
 A detailed synopsis of scheduling methodologies applicable to the chemical 
 and process industries is given by \citet{Harjunkoski:2014}.
