--- a/tex/preface.tex
+++ b/tex/preface.tex
@@ -35,26 +35,27 @@ I'll dig with it.
 
 This thesis was motivated by \ldots
 
-% Introduction?
-We begin in Chapter 1 with a short overview of \ldots 
+% Introduction
+We begin in \hyperref[C.intro]{Chapter \ref*{C.intro}} with a short overview of
+\ldots 
 
-% Business Background?
-In Chapter 2 we \ldots 
+% Literature Review
+In \hyperref[C.litreview]{Chapter \ref*{C.litreview}} we \ldots 
 
-% Literature Review?
-Chapter 3 introduces \ldots 
+% Data
+\hyperref[C.data]{Chapter \ref*{C.data}} introduces \ldots 
 
-% Methodology?
-In Chapter 4, the \ldots 
+% Methodology
+In \hyperref[C.methodology]{Chapter \ref*{C.methodology}}, the \ldots 
 
 % Results --- experimental, survey, etc
-We explore in Chapter 5 \ldots 
+We explore in \hyperref[C.results]{Chapter \ref*{C.results}} \ldots 
 
-% Discussion?
-Chapter 6 examines \ldots 
+% Discussion
+\hyperref[C.discussion]{Chapter \ref*{C.discussion}} examines \ldots 
 
-% Conclusions and future work?
-Finally, in Chapter 7, we \ldots{} 
+% Conclusions and future work
+Finally, in \hyperref[C.conclusions]{Chapter \ref*{C.conclusions}}, we \ldots{} 
 and indicate some possible avenues for further research following on from the
 ideas introduced in this thesis.
 
