--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -39,6 +39,10 @@ subfigure}
 \usepackage{lineno}
 \usepackage[hyphens]{url}
 
+\usepackage{longtable,tabu}
+\usepackage[hidelinks]{hyperref}
+\usepackage{doi}
+
 \input{macros}
 \input{declarns}
 
